--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Chào</title>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&family=Jura:wght@400;700&display=swap');
+	</style>
 </head>
 
 <body>
