--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Chào</title>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&family=Jura:wght@400;700&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@700;900&family=Jura:wght@400;700&display=swap');
 	</style>
 </head>
 
