--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Chào</title>
+	<title>CHTBX</title>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@700;900&family=Jura:wght@400;700&display=swap');
 	</style>
